worked on mobile menu and responsive issues

--- a/www/css/dashboard.css
+++ b/www/css/dashboard.css
@@ -105,3 +105,15 @@ label.datetimeLabel {
     top: 8px;
     transition: all .3s linear;
 }
+
+.custom-legend ul{
+    list-style: none;
+}
+
+.custom-legend li span{
+    border-radius: 5px;
+    display: inline-block;
+    height: 10px;
+    margin-right: 10px;
+    width: 10px;
+}
