--- a/www/css/header.css
+++ b/www/css/header.css
@@ -18,7 +18,9 @@
         display: inline-block;
     }
 
-    
+    .table-div{
+        overflow-x:auto;
+    }
     
 }
 @media (max-width: 768px) {
@@ -106,6 +108,8 @@ background-color: #132644;
    padding-top: 0;
    
 }
-
-
-
+@media only screen and (max-width: 1219px) and (min-width: 768px)  {
+    .content-div{
+        width:70%;
+    }
+}
